--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hustle-incognito",
-  "version": "0.4.5",
+  "version": "0.4.6",
   "description": "SDK for interacting with the Emblem Vault Hustle Incognito Agent API",
   "author": "Emblem Vault",
   "license": "MIT",
@@ -70,7 +70,7 @@
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "dotenv": "^16.4.5",
-    "@emblemvault/auth-sdk": "^2.0.1",
+    "@emblemvault/auth-sdk": "2.3.15",
     "eslint": "^8.57.1",
     "ethers": "^5.8.0",
     "prettier": "^3.5.3",
